--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# DNSPOD API 配置
-DNSPOD_ID=your_id_here
-DNSPOD_TOKEN=your_token_here
+# 腾讯云API配置
+TENCENT_SECRET_ID=your_secret_id_here
+TENCENT_SECRET_KEY=your_secret_key_here
+
+# 日志级别
+LOG_LEVEL=INFO
 
 # 域名配置 - 域名1
 DOMAIN_1=example1.com
@@ -12,14 +15,14 @@ IPV4_ENABLED_1=true     # 是否启用IPv4记录
 IPV6_ENABLED_1=true     # 是否启用IPv6记录
 ENABLED_1=true          # 是否启用此域名配置
 
-# 域名配置 - 域名2（更频繁的更新）
+# 域名配置 - 域名2（可选）
 DOMAIN_2=example2.com
 SUB_DOMAIN_2=www
-REMARK_2=CF优选          # 记录备注
-TTL_2=300               # 更短的TTL
-UPDATE_INTERVAL_2=5      # 更频繁的更新
-IPV4_ENABLED_2=true     # 只启用IPv4
-IPV6_ENABLED_2=false    # 不启用IPv6
+REMARK_2=优选IP
+TTL_2=600
+UPDATE_INTERVAL_2=15
+IPV4_ENABLED_2=true
+IPV6_ENABLED_2=true
 ENABLED_2=true
 
 # 域名配置 - 域名3（更长的缓存）
