支持IP可用检测, 优化配置方式, 检测时间改为可配置

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     container_name: dnspod-yxip
     restart: always
     volumes:
-      - ./.env:/app/.env:ro      # 映射环境变量文件
-      - ./logs:/app/logs         # 映射日志目录 
+      - ./config.yaml:/app/config.yaml:ro  # 映射YAML配置文件
+      - ./logs:/app/logs              # 映射日志目录
