暂时取消arm/64的编译

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,4 +38,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: woodchen/${{ env.IMAGE_NAME }}:latest
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
